parser.output
Terminals unused in grammar

   TOKEN_RECEIVE


State 32 conflicts: 4 reduce/reduce


Grammar

    0 $accept: PROGRAMA $end

    1 PROGRAMA: CREATE EXECUTE

    2 CREATE: TOKEN_CREATE SECUENCIA_DECLAR

    3 SECUENCIA_DECLAR: SECUENCIA_DECLAR DECLARATION
    4                 | DECLARATION

    5 DECLARATION: TIPO TOKEN_BOT LISTA_IDS SECUENCIA_COMPORT TOKEN_END
    6            | TIPO TOKEN_BOT LISTA_IDS TOKEN_END

    7 TIPO: TOKEN_BOOL
    8     | TOKEN_CHAR
    9     | TOKEN_INT

   10 SECUENCIA_COMPORT: SECUENCIA_COMPORT COMPORTAMIENTO
   11                  | COMPORTAMIENTO

   12 COMPORTAMIENTO: TOKEN_ON CONDITION TOKEN_DOSPUNT SECUENCIA_ROBOTINSTR TOKEN_END
   13               | DEFAULTCOMP

   14 DEFAULTCOMP: TOKEN_ON TOKEN_DEFAULT TOKEN_DOSPUNT SECUENCIA_ROBOTINSTR TOKEN_END

   15 CONDITION: TOKEN_ACTIVATION
   16          | TOKEN_DEACTIVATION
   17          | BOOLEXPRESSION

   18 SECUENCIA_ROBOTINSTR: SECUENCIA_ROBOTINSTR ROBOTINSTR
   19                     | ROBOTINSTR

   20 ROBOTINSTR: STORE TOKEN_PUNTO
   21           | COLLECT TOKEN_PUNTO
   22           | DROP TOKEN_PUNTO
   23           | MOVE TOKEN_PUNTO
   24           | READ TOKEN_PUNTO
   25           | SEND TOKEN_PUNTO

   26 STORE: TOKEN_STORE EXPRESSION
   27      | TOKEN_STORE CARACTER

   28 COLLECT: TOKEN_COLLECT
   29        | TOKEN_COLLECT TOKEN_AS ID

   30 DROP: TOKEN_DROP EXPRESSION
   31     | TOKEN_DROP CARACTER

   32 MOVE: DIRECTION ALGEXPRESSION

   33 READ: TOKEN_READ
   34     | TOKEN_READ TOKEN_AS ID

   35 SEND: TOKEN_SEND

   36 DIRECTION: TOKEN_UP
   37          | TOKEN_DOWN
   38          | TOKEN_LEFT
   39          | TOKEN_RIGHT

   40 EXECUTE: TOKEN_EXECUTE SECUENCIA_INSTRUC TOKEN_END

   41 SECUENCIA_INSTRUC: INSTRUCCION
   42                  | SECUENCIA_INSTRUC INSTRUCCION

   43 INSTRUCCION: ADVANCE
   44            | ACTIVATE
   45            | DEACTIVATE
   46            | CONDICIONAL
   47            | LOOP
   48            | INCORPALCANCE

   49 CONDICIONAL: TOKEN_IF BOOLEXPRESSION TOKEN_DOSPUNT SECUENCIA_INSTRUC ELSE TOKEN_END

   50 ELSE: TOKEN_ELSE TOKEN_DOSPUNT SECUENCIA_INSTRUC
   51     | %empty

   52 ACTIVATE: TOKEN_ACTIVATE LISTA_IDS TOKEN_PUNTO

   53 ADVANCE: TOKEN_ADVANCE LISTA_IDS TOKEN_PUNTO

   54 DEACTIVATE: TOKEN_DEACTIVATE LISTA_IDS TOKEN_PUNTO

   55 LOOP: TOKEN_WHILE BOOLEXPRESSION TOKEN_DOSPUNT SECUENCIA_INSTRUC TOKEN_END

   56 INCORPALCANCE: CREATE EXECUTE

   57 LISTA_IDS: ID
   58          | LISTA_IDS TOKEN_COMA ID

   59 EXPRESSION: ALGEXPRESSION
   60           | BOOLEXPRESSION

   61 BOOLEXPRESSION: TOKEN_PARABRE BOOLEXPRESSION TOKEN_PARCIERRA
   62               | TOKEN_NEG BOOLEXPRESSION
   63               | ALGEXPRESSION TOKEN_MENOR ALGEXPRESSION
   64               | ALGEXPRESSION TOKEN_MAYOR ALGEXPRESSION
   65               | ALGEXPRESSION TOKEN_MENORIG ALGEXPRESSION
   66               | ALGEXPRESSION TOKEN_MAYORIG ALGEXPRESSION
   67               | ALGEXPRESSION TOKEN_IGUAL ALGEXPRESSION
   68               | ALGEXPRESSION TOKEN_DESIGUAL ALGEXPRESSION
   69               | BOOLEXPRESSION TOKEN_CONJ BOOLEXPRESSION
   70               | BOOLEXPRESSION TOKEN_DISY BOOLEXPRESSION
   71               | BOOLEXPRESSION TOKEN_IGUAL BOOLEXPRESSION
   72               | BOOLEXPRESSION TOKEN_DESIGUAL BOOLEXPRESSION
   73               | TOKEN_TRUE
   74               | TOKEN_FALSE
   75               | ID

   76 ALGEXPRESSION: ALGEXPRESSION TOKEN_SUMA ALGEXPRESSION
   77              | ALGEXPRESSION TOKEN_MULT ALGEXPRESSION
   78              | ALGEXPRESSION TOKEN_RESTA ALGEXPRESSION
   79              | ALGEXPRESSION TOKEN_DIV ALGEXPRESSION
   80              | ALGEXPRESSION TOKEN_MOD ALGEXPRESSION
   81              | TOKEN_RESTA ALGEXPRESSION
   82              | TOKEN_PARABRE ALGEXPRESSION TOKEN_PARCIERRA
   83              | ID
   84              | NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 84
ID (259) 29 34 57 58 75 83
CARACTER (260) 27 31
TOKEN_TRUE (261) 73
TOKEN_FALSE (262) 74
TOKEN_PUNTO (263) 20 21 22 23 24 25 52 53 54
TOKEN_DOSPUNT (264) 12 14 49 50 55
TOKEN_PARABRE (265) 61 82
TOKEN_PARCIERRA (266) 61 82
TOKEN_SUMA (267) 76
TOKEN_RESTA (268) 78 81
TOKEN_MULT (269) 77
TOKEN_DIV (270) 79
TOKEN_MOD (271) 80
TOKEN_CONJ (272) 69
TOKEN_DISY (273) 70
TOKEN_NEG (274) 62
TOKEN_MENOR (275) 63
TOKEN_MAYOR (276) 64
TOKEN_MENORIG (277) 65
TOKEN_MAYORIG (278) 66
TOKEN_CREATE (279) 2
TOKEN_WHILE (280) 55
TOKEN_BOOL (281) 7
TOKEN_INT (282) 9
TOKEN_CHAR (283) 8
TOKEN_IF (284) 49
TOKEN_ELSE (285) 50
TOKEN_SEND (286) 35
TOKEN_EXECUTE (287) 40
TOKEN_ON (288) 12 14
TOKEN_STORE (289) 26 27
TOKEN_BOT (290) 5 6
TOKEN_DESIGUAL (291) 68 72
TOKEN_IGUAL (292) 67 71
TOKEN_COMA (293) 58
TOKEN_DEFAULT (294) 14
TOKEN_COLLECT (295) 28 29
TOKEN_DROP (296) 30 31
TOKEN_UP (297) 36
TOKEN_DOWN (298) 37
TOKEN_RIGHT (299) 39
TOKEN_LEFT (300) 38
TOKEN_READ (301) 33 34
TOKEN_AS (302) 29 34
TOKEN_RECEIVE (303)
TOKEN_ADVANCE (304) 53
TOKEN_ACTIVATE (305) 52
TOKEN_ACTIVATION (306) 15
TOKEN_DEACTIVATE (307) 54
TOKEN_DEACTIVATION (308) 16
TOKEN_END (309) 5 6 12 14 40 49 55


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
PROGRAMA (56)
    on left: 1, on right: 0
CREATE (57)
    on left: 2, on right: 1 56
SECUENCIA_DECLAR (58)
    on left: 3 4, on right: 2 3
DECLARATION (59)
    on left: 5 6, on right: 3 4
TIPO (60)
    on left: 7 8 9, on right: 5 6
SECUENCIA_COMPORT (61)
    on left: 10 11, on right: 5 10
COMPORTAMIENTO (62)
    on left: 12 13, on right: 10 11
DEFAULTCOMP (63)
    on left: 14, on right: 13
CONDITION (64)
    on left: 15 16 17, on right: 12
SECUENCIA_ROBOTINSTR (65)
    on left: 18 19, on right: 12 14 18
ROBOTINSTR (66)
    on left: 20 21 22 23 24 25, on right: 18 19
STORE (67)
    on left: 26 27, on right: 20
COLLECT (68)
    on left: 28 29, on right: 21
DROP (69)
    on left: 30 31, on right: 22
MOVE (70)
    on left: 32, on right: 23
READ (71)
    on left: 33 34, on right: 24
SEND (72)
    on left: 35, on right: 25
DIRECTION (73)
    on left: 36 37 38 39, on right: 32
EXECUTE (74)
    on left: 40, on right: 1 56
SECUENCIA_INSTRUC (75)
    on left: 41 42, on right: 40 42 49 50 55
INSTRUCCION (76)
    on left: 43 44 45 46 47 48, on right: 41 42
CONDICIONAL (77)
    on left: 49, on right: 46
ELSE (78)
    on left: 50 51, on right: 49
ACTIVATE (79)
    on left: 52, on right: 44
ADVANCE (80)
    on left: 53, on right: 43
DEACTIVATE (81)
    on left: 54, on right: 45
LOOP (82)
    on left: 55, on right: 47
INCORPALCANCE (83)
    on left: 56, on right: 48
LISTA_IDS (84)
    on left: 57 58, on right: 5 6 52 53 54 58
EXPRESSION (85)
    on left: 59 60, on right: 26 30
BOOLEXPRESSION (86)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right:
    17 49 55 60 61 62 69 70 71 72
ALGEXPRESSION (87)
    on left: 76 77 78 79 80 81 82 83 84, on right: 32 59 63 64 65 66
    67 68 76 77 78 79 80 81 82


State 0

    0 $accept: . PROGRAMA $end

    TOKEN_CREATE  shift, and go to state 1

    PROGRAMA  go to state 2
    CREATE    go to state 3


State 1

    2 CREATE: TOKEN_CREATE . SECUENCIA_DECLAR

    TOKEN_BOOL  shift, and go to state 4
    TOKEN_INT   shift, and go to state 5
    TOKEN_CHAR  shift, and go to state 6

    SECUENCIA_DECLAR  go to state 7
    DECLARATION       go to state 8
    TIPO              go to state 9


State 2

    0 $accept: PROGRAMA . $end

    $end  shift, and go to state 10


State 3

    1 PROGRAMA: CREATE . EXECUTE

    TOKEN_EXECUTE  shift, and go to state 11

    EXECUTE  go to state 12


State 4

    7 TIPO: TOKEN_BOOL .

    $default  reduce using rule 7 (TIPO)


State 5

    9 TIPO: TOKEN_INT .

    $default  reduce using rule 9 (TIPO)


State 6

    8 TIPO: TOKEN_CHAR .

    $default  reduce using rule 8 (TIPO)


State 7

    2 CREATE: TOKEN_CREATE SECUENCIA_DECLAR .
    3 SECUENCIA_DECLAR: SECUENCIA_DECLAR . DECLARATION

    TOKEN_BOOL  shift, and go to state 4
    TOKEN_INT   shift, and go to state 5
    TOKEN_CHAR  shift, and go to state 6

    $default  reduce using rule 2 (CREATE)

    DECLARATION  go to state 13
    TIPO         go to state 9


State 8

    4 SECUENCIA_DECLAR: DECLARATION .

    $default  reduce using rule 4 (SECUENCIA_DECLAR)


State 9

    5 DECLARATION: TIPO . TOKEN_BOT LISTA_IDS SECUENCIA_COMPORT TOKEN_END
    6            | TIPO . TOKEN_BOT LISTA_IDS TOKEN_END

    TOKEN_BOT  shift, and go to state 14


State 10

    0 $accept: PROGRAMA $end .

    $default  accept


State 11

   40 EXECUTE: TOKEN_EXECUTE . SECUENCIA_INSTRUC TOKEN_END

    TOKEN_CREATE      shift, and go to state 1
    TOKEN_WHILE       shift, and go to state 15
    TOKEN_IF          shift, and go to state 16
    TOKEN_ADVANCE     shift, and go to state 17
    TOKEN_ACTIVATE    shift, and go to state 18
    TOKEN_DEACTIVATE  shift, and go to state 19

    CREATE             go to state 20
    SECUENCIA_INSTRUC  go to state 21
    INSTRUCCION        go to state 22
    CONDICIONAL        go to state 23
    ACTIVATE           go to state 24
    ADVANCE            go to state 25
    DEACTIVATE         go to state 26
    LOOP               go to state 27
    INCORPALCANCE      go to state 28


State 12

    1 PROGRAMA: CREATE EXECUTE .

    $default  reduce using rule 1 (PROGRAMA)


State 13

    3 SECUENCIA_DECLAR: SECUENCIA_DECLAR DECLARATION .

    $default  reduce using rule 3 (SECUENCIA_DECLAR)


State 14

    5 DECLARATION: TIPO TOKEN_BOT . LISTA_IDS SECUENCIA_COMPORT TOKEN_END
    6            | TIPO TOKEN_BOT . LISTA_IDS TOKEN_END

    ID  shift, and go to state 29

    LISTA_IDS  go to state 30


State 15

   55 LOOP: TOKEN_WHILE . BOOLEXPRESSION TOKEN_DOSPUNT SECUENCIA_INSTRUC TOKEN_END

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 38
    ALGEXPRESSION   go to state 39


State 16

   49 CONDICIONAL: TOKEN_IF . BOOLEXPRESSION TOKEN_DOSPUNT SECUENCIA_INSTRUC ELSE TOKEN_END

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 40
    ALGEXPRESSION   go to state 39


State 17

   53 ADVANCE: TOKEN_ADVANCE . LISTA_IDS TOKEN_PUNTO

    ID  shift, and go to state 29

    LISTA_IDS  go to state 41


State 18

   52 ACTIVATE: TOKEN_ACTIVATE . LISTA_IDS TOKEN_PUNTO

    ID  shift, and go to state 29

    LISTA_IDS  go to state 42


State 19

   54 DEACTIVATE: TOKEN_DEACTIVATE . LISTA_IDS TOKEN_PUNTO

    ID  shift, and go to state 29

    LISTA_IDS  go to state 43


State 20

   56 INCORPALCANCE: CREATE . EXECUTE

    TOKEN_EXECUTE  shift, and go to state 11

    EXECUTE  go to state 44


State 21

   40 EXECUTE: TOKEN_EXECUTE SECUENCIA_INSTRUC . TOKEN_END
   42 SECUENCIA_INSTRUC: SECUENCIA_INSTRUC . INSTRUCCION

    TOKEN_CREATE      shift, and go to state 1
    TOKEN_WHILE       shift, and go to state 15
    TOKEN_IF          shift, and go to state 16
    TOKEN_ADVANCE     shift, and go to state 17
    TOKEN_ACTIVATE    shift, and go to state 18
    TOKEN_DEACTIVATE  shift, and go to state 19
    TOKEN_END         shift, and go to state 45

    CREATE         go to state 20
    INSTRUCCION    go to state 46
    CONDICIONAL    go to state 23
    ACTIVATE       go to state 24
    ADVANCE        go to state 25
    DEACTIVATE     go to state 26
    LOOP           go to state 27
    INCORPALCANCE  go to state 28


State 22

   41 SECUENCIA_INSTRUC: INSTRUCCION .

    $default  reduce using rule 41 (SECUENCIA_INSTRUC)


State 23

   46 INSTRUCCION: CONDICIONAL .

    $default  reduce using rule 46 (INSTRUCCION)


State 24

   44 INSTRUCCION: ACTIVATE .

    $default  reduce using rule 44 (INSTRUCCION)


State 25

   43 INSTRUCCION: ADVANCE .

    $default  reduce using rule 43 (INSTRUCCION)


State 26

   45 INSTRUCCION: DEACTIVATE .

    $default  reduce using rule 45 (INSTRUCCION)


State 27

   47 INSTRUCCION: LOOP .

    $default  reduce using rule 47 (INSTRUCCION)


State 28

   48 INSTRUCCION: INCORPALCANCE .

    $default  reduce using rule 48 (INSTRUCCION)


State 29

   57 LISTA_IDS: ID .

    $default  reduce using rule 57 (LISTA_IDS)


State 30

    5 DECLARATION: TIPO TOKEN_BOT LISTA_IDS . SECUENCIA_COMPORT TOKEN_END
    6            | TIPO TOKEN_BOT LISTA_IDS . TOKEN_END
   58 LISTA_IDS: LISTA_IDS . TOKEN_COMA ID

    TOKEN_ON    shift, and go to state 47
    TOKEN_COMA  shift, and go to state 48
    TOKEN_END   shift, and go to state 49

    SECUENCIA_COMPORT  go to state 50
    COMPORTAMIENTO     go to state 51
    DEFAULTCOMP        go to state 52


State 31

   84 ALGEXPRESSION: NUM .

    $default  reduce using rule 84 (ALGEXPRESSION)


State 32

   75 BOOLEXPRESSION: ID .
   83 ALGEXPRESSION: ID .

    TOKEN_PUNTO      reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_PUNTO      [reduce using rule 83 (ALGEXPRESSION)]
    TOKEN_DOSPUNT    reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_PARCIERRA  reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_PARCIERRA  [reduce using rule 83 (ALGEXPRESSION)]
    TOKEN_CONJ       reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_DISY       reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_DESIGUAL   reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_DESIGUAL   [reduce using rule 83 (ALGEXPRESSION)]
    TOKEN_IGUAL      reduce using rule 75 (BOOLEXPRESSION)
    TOKEN_IGUAL      [reduce using rule 83 (ALGEXPRESSION)]
    $default         reduce using rule 83 (ALGEXPRESSION)


State 33

   73 BOOLEXPRESSION: TOKEN_TRUE .

    $default  reduce using rule 73 (BOOLEXPRESSION)


State 34

   74 BOOLEXPRESSION: TOKEN_FALSE .

    $default  reduce using rule 74 (BOOLEXPRESSION)


State 35

   61 BOOLEXPRESSION: TOKEN_PARABRE . BOOLEXPRESSION TOKEN_PARCIERRA
   82 ALGEXPRESSION: TOKEN_PARABRE . ALGEXPRESSION TOKEN_PARCIERRA

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 53
    ALGEXPRESSION   go to state 54


State 36

   81 ALGEXPRESSION: TOKEN_RESTA . ALGEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 55
    TOKEN_PARABRE  shift, and go to state 56
    TOKEN_RESTA    shift, and go to state 36

    ALGEXPRESSION  go to state 57


State 37

   62 BOOLEXPRESSION: TOKEN_NEG . BOOLEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 58
    ALGEXPRESSION   go to state 39


State 38

   55 LOOP: TOKEN_WHILE BOOLEXPRESSION . TOKEN_DOSPUNT SECUENCIA_INSTRUC TOKEN_END
   69 BOOLEXPRESSION: BOOLEXPRESSION . TOKEN_CONJ BOOLEXPRESSION
   70               | BOOLEXPRESSION . TOKEN_DISY BOOLEXPRESSION
   71               | BOOLEXPRESSION . TOKEN_IGUAL BOOLEXPRESSION
   72               | BOOLEXPRESSION . TOKEN_DESIGUAL BOOLEXPRESSION

    TOKEN_DOSPUNT   shift, and go to state 59
    TOKEN_CONJ      shift, and go to state 60
    TOKEN_DISY      shift, and go to state 61
    TOKEN_DESIGUAL  shift, and go to state 62
    TOKEN_IGUAL     shift, and go to state 63


State 39

   63 BOOLEXPRESSION: ALGEXPRESSION . TOKEN_MENOR ALGEXPRESSION
   64               | ALGEXPRESSION . TOKEN_MAYOR ALGEXPRESSION
   65               | ALGEXPRESSION . TOKEN_MENORIG ALGEXPRESSION
   66               | ALGEXPRESSION . TOKEN_MAYORIG ALGEXPRESSION
   67               | ALGEXPRESSION . TOKEN_IGUAL ALGEXPRESSION
   68               | ALGEXPRESSION . TOKEN_DESIGUAL ALGEXPRESSION
   76 ALGEXPRESSION: ALGEXPRESSION . TOKEN_SUMA ALGEXPRESSION
   77              | ALGEXPRESSION . TOKEN_MULT ALGEXPRESSION
   78              | ALGEXPRESSION . TOKEN_RESTA ALGEXPRESSION
   79              | ALGEXPRESSION . TOKEN_DIV ALGEXPRESSION
   80              | ALGEXPRESSION . TOKEN_MOD ALGEXPRESSION

    TOKEN_SUMA      shift, and go to state 64
    TOKEN_RESTA     shift, and go to state 65
    TOKEN_MULT      shift, and go to state 66
    TOKEN_DIV       shift, and go to state 67
    TOKEN_MOD       shift, and go to state 68
    TOKEN_MENOR     shift, and go to state 69
    TOKEN_MAYOR     shift, and go to state 70
    TOKEN_MENORIG   shift, and go to state 71
    TOKEN_MAYORIG   shift, and go to state 72
    TOKEN_DESIGUAL  shift, and go to state 73
    TOKEN_IGUAL     shift, and go to state 74


State 40

   49 CONDICIONAL: TOKEN_IF BOOLEXPRESSION . TOKEN_DOSPUNT SECUENCIA_INSTRUC ELSE TOKEN_END
   69 BOOLEXPRESSION: BOOLEXPRESSION . TOKEN_CONJ BOOLEXPRESSION
   70               | BOOLEXPRESSION . TOKEN_DISY BOOLEXPRESSION
   71               | BOOLEXPRESSION . TOKEN_IGUAL BOOLEXPRESSION
   72               | BOOLEXPRESSION . TOKEN_DESIGUAL BOOLEXPRESSION

    TOKEN_DOSPUNT   shift, and go to state 75
    TOKEN_CONJ      shift, and go to state 60
    TOKEN_DISY      shift, and go to state 61
    TOKEN_DESIGUAL  shift, and go to state 62
    TOKEN_IGUAL     shift, and go to state 63


State 41

   53 ADVANCE: TOKEN_ADVANCE LISTA_IDS . TOKEN_PUNTO
   58 LISTA_IDS: LISTA_IDS . TOKEN_COMA ID

    TOKEN_PUNTO  shift, and go to state 76
    TOKEN_COMA   shift, and go to state 48


State 42

   52 ACTIVATE: TOKEN_ACTIVATE LISTA_IDS . TOKEN_PUNTO
   58 LISTA_IDS: LISTA_IDS . TOKEN_COMA ID

    TOKEN_PUNTO  shift, and go to state 77
    TOKEN_COMA   shift, and go to state 48


State 43

   54 DEACTIVATE: TOKEN_DEACTIVATE LISTA_IDS . TOKEN_PUNTO
   58 LISTA_IDS: LISTA_IDS . TOKEN_COMA ID

    TOKEN_PUNTO  shift, and go to state 78
    TOKEN_COMA   shift, and go to state 48


State 44

   56 INCORPALCANCE: CREATE EXECUTE .

    $default  reduce using rule 56 (INCORPALCANCE)


State 45

   40 EXECUTE: TOKEN_EXECUTE SECUENCIA_INSTRUC TOKEN_END .

    $default  reduce using rule 40 (EXECUTE)


State 46

   42 SECUENCIA_INSTRUC: SECUENCIA_INSTRUC INSTRUCCION .

    $default  reduce using rule 42 (SECUENCIA_INSTRUC)


State 47

   12 COMPORTAMIENTO: TOKEN_ON . CONDITION TOKEN_DOSPUNT SECUENCIA_ROBOTINSTR TOKEN_END
   14 DEFAULTCOMP: TOKEN_ON . TOKEN_DEFAULT TOKEN_DOSPUNT SECUENCIA_ROBOTINSTR TOKEN_END

    NUM                 shift, and go to state 31
    ID                  shift, and go to state 32
    TOKEN_TRUE          shift, and go to state 33
    TOKEN_FALSE         shift, and go to state 34
    TOKEN_PARABRE       shift, and go to state 35
    TOKEN_RESTA         shift, and go to state 36
    TOKEN_NEG           shift, and go to state 37
    TOKEN_DEFAULT       shift, and go to state 79
    TOKEN_ACTIVATION    shift, and go to state 80
    TOKEN_DEACTIVATION  shift, and go to state 81

    CONDITION       go to state 82
    BOOLEXPRESSION  go to state 83
    ALGEXPRESSION   go to state 39


State 48

   58 LISTA_IDS: LISTA_IDS TOKEN_COMA . ID

    ID  shift, and go to state 84


State 49

    6 DECLARATION: TIPO TOKEN_BOT LISTA_IDS TOKEN_END .

    $default  reduce using rule 6 (DECLARATION)


State 50

    5 DECLARATION: TIPO TOKEN_BOT LISTA_IDS SECUENCIA_COMPORT . TOKEN_END
   10 SECUENCIA_COMPORT: SECUENCIA_COMPORT . COMPORTAMIENTO

    TOKEN_ON   shift, and go to state 47
    TOKEN_END  shift, and go to state 85

    COMPORTAMIENTO  go to state 86
    DEFAULTCOMP     go to state 52


State 51

   11 SECUENCIA_COMPORT: COMPORTAMIENTO .

    $default  reduce using rule 11 (SECUENCIA_COMPORT)


State 52

   13 COMPORTAMIENTO: DEFAULTCOMP .

    $default  reduce using rule 13 (COMPORTAMIENTO)


State 53

   61 BOOLEXPRESSION: TOKEN_PARABRE BOOLEXPRESSION . TOKEN_PARCIERRA
   69               | BOOLEXPRESSION . TOKEN_CONJ BOOLEXPRESSION
   70               | BOOLEXPRESSION . TOKEN_DISY BOOLEXPRESSION
   71               | BOOLEXPRESSION . TOKEN_IGUAL BOOLEXPRESSION
   72               | BOOLEXPRESSION . TOKEN_DESIGUAL BOOLEXPRESSION

    TOKEN_PARCIERRA  shift, and go to state 87
    TOKEN_CONJ       shift, and go to state 60
    TOKEN_DISY       shift, and go to state 61
    TOKEN_DESIGUAL   shift, and go to state 62
    TOKEN_IGUAL      shift, and go to state 63


State 54

   63 BOOLEXPRESSION: ALGEXPRESSION . TOKEN_MENOR ALGEXPRESSION
   64               | ALGEXPRESSION . TOKEN_MAYOR ALGEXPRESSION
   65               | ALGEXPRESSION . TOKEN_MENORIG ALGEXPRESSION
   66               | ALGEXPRESSION . TOKEN_MAYORIG ALGEXPRESSION
   67               | ALGEXPRESSION . TOKEN_IGUAL ALGEXPRESSION
   68               | ALGEXPRESSION . TOKEN_DESIGUAL ALGEXPRESSION
   76 ALGEXPRESSION: ALGEXPRESSION . TOKEN_SUMA ALGEXPRESSION
   77              | ALGEXPRESSION . TOKEN_MULT ALGEXPRESSION
   78              | ALGEXPRESSION . TOKEN_RESTA ALGEXPRESSION
   79              | ALGEXPRESSION . TOKEN_DIV ALGEXPRESSION
   80              | ALGEXPRESSION . TOKEN_MOD ALGEXPRESSION
   82              | TOKEN_PARABRE ALGEXPRESSION . TOKEN_PARCIERRA

    TOKEN_PARCIERRA  shift, and go to state 88
    TOKEN_SUMA       shift, and go to state 64
    TOKEN_RESTA      shift, and go to state 65
    TOKEN_MULT       shift, and go to state 66
    TOKEN_DIV        shift, and go to state 67
    TOKEN_MOD        shift, and go to state 68
    TOKEN_MENOR      shift, and go to state 69
    TOKEN_MAYOR      shift, and go to state 70
    TOKEN_MENORIG    shift, and go to state 71
    TOKEN_MAYORIG    shift, and go to state 72
    TOKEN_DESIGUAL   shift, and go to state 73
    TOKEN_IGUAL      shift, and go to state 74


State 55

   83 ALGEXPRESSION: ID .

    $default  reduce using rule 83 (ALGEXPRESSION)


State 56

   82 ALGEXPRESSION: TOKEN_PARABRE . ALGEXPRESSION TOKEN_PARCIERRA

    NUM            shift, and go to state 31
    ID             shift, and go to state 55
    TOKEN_PARABRE  shift, and go to state 56
    TOKEN_RESTA    shift, and go to state 36

    ALGEXPRESSION  go to state 89


State 57

   76 ALGEXPRESSION: ALGEXPRESSION . TOKEN_SUMA ALGEXPRESSION
   77              | ALGEXPRESSION . TOKEN_MULT ALGEXPRESSION
   78              | ALGEXPRESSION . TOKEN_RESTA ALGEXPRESSION
   79              | ALGEXPRESSION . TOKEN_DIV ALGEXPRESSION
   80              | ALGEXPRESSION . TOKEN_MOD ALGEXPRESSION
   81              | TOKEN_RESTA ALGEXPRESSION .

    TOKEN_MULT  shift, and go to state 66
    TOKEN_DIV   shift, and go to state 67
    TOKEN_MOD   shift, and go to state 68

    $default  reduce using rule 81 (ALGEXPRESSION)


State 58

   62 BOOLEXPRESSION: TOKEN_NEG BOOLEXPRESSION .
   69               | BOOLEXPRESSION . TOKEN_CONJ BOOLEXPRESSION
   70               | BOOLEXPRESSION . TOKEN_DISY BOOLEXPRESSION
   71               | BOOLEXPRESSION . TOKEN_IGUAL BOOLEXPRESSION
   72               | BOOLEXPRESSION . TOKEN_DESIGUAL BOOLEXPRESSION

    $default  reduce using rule 62 (BOOLEXPRESSION)


State 59

   55 LOOP: TOKEN_WHILE BOOLEXPRESSION TOKEN_DOSPUNT . SECUENCIA_INSTRUC TOKEN_END

    TOKEN_CREATE      shift, and go to state 1
    TOKEN_WHILE       shift, and go to state 15
    TOKEN_IF          shift, and go to state 16
    TOKEN_ADVANCE     shift, and go to state 17
    TOKEN_ACTIVATE    shift, and go to state 18
    TOKEN_DEACTIVATE  shift, and go to state 19

    CREATE             go to state 20
    SECUENCIA_INSTRUC  go to state 90
    INSTRUCCION        go to state 22
    CONDICIONAL        go to state 23
    ACTIVATE           go to state 24
    ADVANCE            go to state 25
    DEACTIVATE         go to state 26
    LOOP               go to state 27
    INCORPALCANCE      go to state 28


State 60

   69 BOOLEXPRESSION: BOOLEXPRESSION TOKEN_CONJ . BOOLEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 91
    ALGEXPRESSION   go to state 39


State 61

   70 BOOLEXPRESSION: BOOLEXPRESSION TOKEN_DISY . BOOLEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 92
    ALGEXPRESSION   go to state 39


State 62

   72 BOOLEXPRESSION: BOOLEXPRESSION TOKEN_DESIGUAL . BOOLEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 93
    ALGEXPRESSION   go to state 39


State 63

   71 BOOLEXPRESSION: BOOLEXPRESSION TOKEN_IGUAL . BOOLEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 32
    TOKEN_TRUE     shift, and go to state 33
    TOKEN_FALSE    shift, and go to state 34
    TOKEN_PARABRE  shift, and go to state 35
    TOKEN_RESTA    shift, and go to state 36
    TOKEN_NEG      shift, and go to state 37

    BOOLEXPRESSION  go to state 94
    ALGEXPRESSION   go to state 39


State 64

   76 ALGEXPRESSION: ALGEXPRESSION TOKEN_SUMA . ALGEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 55
    TOKEN_PARABRE  shift, and go to state 56
    TOKEN_RESTA    shift, and go to state 36

    ALGEXPRESSION  go to state 95


State 65

   78 ALGEXPRESSION: ALGEXPRESSION TOKEN_RESTA . ALGEXPRESSION

    NUM            shift, and go to state 31
    ID             shift, and go to state 55
    TOKEN_PARABRE  shift, and go to state 56
    TOKEN_RESTA    shift, and go to state 36

    ALGEXPRESSION  go to state 96


State 66

   77 ALGEXPRESSION: ALGEXPRESSION TOKEN_MULT . ALGEXPRESSION
